--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   <title>GTwitter Stats</title>
 
-  <link rel="stylesheet" type="text/css" href="https://github.com/yetiarmynft/Gtwitter/style.css">
+  <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/yetiarmynft/Gtwitter/main/style.css">
   </head>
   <body>
   <div class="app">
